# ScreenClip

./: .gitignore  Cargo.toml  README.md  build.rs  screenclip.desktop
.github/workflows/: build.yml  release.yml
src/: cpu_present.rs  cpu_renderer.rs  desktop_geometry.rs  hotkeys.rs  main.rs  overlay_ui.rs  overlay_ui_tests.rs  overlay_ui_utils.rs  secondary_toolbar.rs  selection_geometry.rs  tray.rs
src/annotations/: rectangle.rs  text.rs
wix/: AppxManifest.xml  main.wxs  template.wxs
