[package]
name = "screenclip"
version = "0.0.1-dev.2"
edition = "2021"
authors = ["ScreenClip"]
description = "Screenshot capture utility"

[package.metadata.packager]
product-name = "ScreenClip"
identifier = "io.github.shuaixr.screenclip"
publisher = "shuaixr"
description = "Screenshot capture utility"
long-description = "A Rust based screenshot utility built with egui and winit, focused on fast screen capture and annotation workflows, with global hotkey support and a desktop overlay UI."
authors = ["ScreenClip"]
copyright = "Copyright (c) 2026 ScreenClip"
category = "Utility"
homepage = "https://github.com/shuaixr/screenclip"
out-dir = "target/packages"
binaries-dir = "target/release"
formats = ["nsis", "wix"]
log-level = "info"

icons = ["assets/icons/Product.ico", "assets/icons/256x256.png"]

resources = [
    "screenclip.desktop",
    { src = "assets/icons/256x256.png", target = "screenclip.png" },
]

before-packaging-command = "cargo build --release"

[package.metadata.packager.windows]
digest-algorithm = "SHA-256"
certificate-thumbprint = "3E572F5443B80E8E0AC906BDBCCC546CBB194CE0"
tsp = true
timestamp-url = "http://timestamp.ssl.com"
allow-downgrades = true

[package.metadata.packager.nsis]
compression = "lzma"
installer-icon = "assets/icons/Product.ico"
install-mode = "perUser"
appdata-paths = ["$LOCALAPPDATA/$PUBLISHER/$PRODUCTNAME"]
preinstall-section = """
  WriteRegStr HKCU "Software\\Microsoft\\Windows\\CurrentVersion\\Run" "ScreenClip" "$INSTDIR\\screenclip.exe"
  Push "$INSTDIR"
  Call EnvVarPathAdd
"""

[package.metadata.packager.wix]
languages = ["en-US"]
template = "wix/template.wxs"

[package.metadata.packager.deb]
depends = [
    "libc6",
    "libx11-6",
    "libxcb1",
    "libxkbcommon0",
    "libwayland-client0",
    "libgtk-3-0",
]
section = "graphics"
priority = "optional"

[package.metadata.packager.appimage]
bundle-xdg-open = true

[build-dependencies]
winres = "0.1"


[dependencies]
ab_glyph = "0.2"
arboard = "3.6"
auto-launch = "0.5"
egui = { version = "0.31.1", default-features = false, features = [
    "default_fonts",
] }
egui-winit = { version = "0.31.1", default-features = false, features = [
    "clipboard",
    "links",
    "x11",
    "wayland",
] }
egui-phosphor = "0.9"
env_logger = "0.11"
ctrlc = "3.4"
global-hotkey = "0.8"
log = "0.4"
raw-window-handle = "0.6"
rfd = "0.15"
screenshots = "0.8"
softbuffer = "0.4"
tray-icon = "0.24"
winit = { version = "0.30.7", default-features = false, features = [
    "rwh_06",
    "x11",
    "wayland",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3

# Reduce compile time during development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
