[package]
name = "screenclip"
version = "0.0.1-dev.3"
edition = "2021"
authors = ["ScreenClip"]
description = "Screenshot capture utility"
homepage = "https://github.com/shuaixr/screenclip"
repository = "https://github.com/shuaixr/screenclip"
license = "MIT OR Apache-2.0"
categories = ["multimedia::graphics"]

[package.metadata.packager]
product-name = "ScreenClip"
identifier = "dev.screenclip.app"
publisher = "ScreenClip"
description = "Screenshot capture utility"
long-description = """
ScreenClip is a Rust based screenshot utility built with egui and winit,
focused on fast screen capture and annotation workflows, with global hotkey
support and a desktop overlay UI.
"""
homepage = "https://github.com/shuaixr/screenclip"
authors = ["ScreenClip"]
category = "Utility"
icons = ["assets/icons/Product.ico"]
binaries = [{ path = "screenclip", main = true }]
formats = ["nsis"]

[package.metadata.packager.nsis]
installer-mode = "currentUser"
installer-icon = "assets/icons/Product.ico"
compression = "lzma"

[build-dependencies]
winres = "0.1"


[dependencies]
ab_glyph = "0.2"
arboard = "3.6"
auto-launch = "0.5"
egui = { version = "0.31.1", default-features = false, features = [
    "default_fonts",
] }
egui-winit = { version = "0.31.1", default-features = false, features = [
    "clipboard",
    "links",
    "x11",
    "wayland",
] }
egui-phosphor = "0.9"
env_logger = "0.11"
ctrlc = "3.4"
global-hotkey = "0.8"
log = "0.4"
raw-window-handle = "0.6"
rfd = "0.15"
screenshots = "0.8"
softbuffer = "0.4"
tray-icon = "0.24"
winit = { version = "0.30.7", default-features = false, features = [
    "rwh_06",
    "x11",
    "wayland",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3

# Reduce compile time during development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
